--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "kewl-kevins",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fontsource/press-start-2p": "^4.5.2",
-    "@openzeppelin/contracts": "^4.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -12,13 +10,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.24",
-    "moralis": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-moralis": "^1.3.2",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
