--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.24",
+    "metamask-react": "^2.3.0",
     "moralis": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,7 +21,8 @@
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "web3": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
