--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.0",
     "web3": "^1.7.1"
   },
